* added lc -0 option to return objects in tree order - Sean Morrison
* fixed crash in iges-g importer due to parsing error - Ștefan Mirea
* fixed corrupt output generated by iges-g importer - Ștefan Mirea
* gqa respects LIBRT_BOT_MINTIE environment variable - Ștefan Mirea
* improved behavior of mged's draw command - Ștefan Mirea
* fixed handling of extra whitespace in nirt commands - Ștefan Mirea
* added ply-g importer for Stanford PLY geometry format - Rishub Jain
* fixed texture mapping crash with bad image dimensions - Ștefan Mirea
* fixed g2asc and asc2g handling of dsp primitive - Cliff Yapp
* rewrote gdiff with improved output & reporting options - Cliff Yapp
* fixed pix-ps -S -W -N output size options being ignored - Carl Moore
* fixed crash exporting mixed mode merged BoT meshes - Sean Morrison
* fixed submodel primitive crash - Cliff Yapp, Sean Morrison
* support non-.g file import in Archer's file open dialog - Cliff Yapp
* added brep support to g2asc and asc2g - Cliff Yapp
* fixed a CPU affinity locking bug on Linux platforms - Sean Morrison
* fixed mged -c crash running view-modifying commands - Sean Morrison
* improved kill, killall, killtree documentation - Sean Morrison
* added killtree -f force flag to kill unconditionally - Sean Morrison
* killtree now defaults to skipping referenced objects - Sean Morrison
* nirt -h option is now help, old -h is -H - Carl Moore
* implemented preliminary NURBS geometry Boolean evaluation
	- Wu Jianbang, Nick Reed, Cliff Yapp
* improved step-g assembly hierarchy import support - Keith Bowman
* fixed rtweight when using the -G grid spacing option - Sean Morrison
* fixed memory leaks in a number of pix utilities - Cezar Elnazli
* improved NURBS ray tracing & tessellation robustness - Keith Bowman
* improved step-g NURBS geometry import robustness - Keith Bowman
* added -v verbose output option to mged 'search' command - Cliff Yapp
* fixed g_lint and pixcount red-black tree memory leaks - Tom Browder